# solidity-ibc-eureka

./: .dockerignore  .env.example  .gitattributes  .gitignore  .slither.config.json  .solhint.json  1.txt  AGENTS.md  BRIEF.md  CARGO_TOML_FIXES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.attestor-aggregator  Dockerfile.wasm.clang  GUIDELINES.md  IMPLEMENTATION_SUMMARY.md  LICENSE.md  QBFT_FINDINGS_1.md  QBFT_FINDINGS_2.md  README-docker.md  README-github-workflow.md  README.md  RELEASES.md  UPGRADABILITY.md  UPGRADEABILITY.md  anchor-test.sh  buf.gen.wfchain.yaml  buf.gen.yaml  buf.yaml  bun.lockb  chain-registry-validation-analysis.md  chain-registry-validation-improvements.md  config.json  debug.md  deny.toml  depot.json  docker-compose.yml  flake.nix  (+12 more)
abi/: ICSCore.json  (+21 more)
e2e/interchaintestv8/tools/misbehaviour-to-borsh/: Cargo.toml
ibc-solana/programs/mock-ibc-app/: Cargo.toml
ibc-solana/programs/mock-ibc-app/src/: lib.rs
ibc-solana/programs/mock-light-client/: Cargo.toml
programs/08-wasm-eth/: Cargo.toml
programs/08-wasm-eth/src/: contract.rs  error.rs  msg.rs  state.rs
programs/attestor/: Cargo.toml
programs/attestor/src/: key.rs  lib.rs  main.rs
programs/attestor/src/tests/: keygen.rs
programs/cw-ics08-wasm-attestor/: Cargo.toml  README.md
programs/cw-ics08-wasm-attestor/src/: contract.rs  error.rs  instantiate.rs  lib.rs  msg.rs  query.rs  state.rs  sudo.rs
programs/cw-ics08-wasm-attestor/src/test/: helpers.rs  mod.rs
programs/cw-ics08-wasm-sol/: Cargo.toml
programs/cw-ics08-wasm-sol/src/: contract.rs  error.rs  instantiate.rs  msg.rs  query.rs  state.rs  sudo.rs
programs/cw-ics08-wasm-sol/src/test/: helpers.rs
programs/event-loop/: Cargo.toml  dev.json  justfile
programs/event-loop/src/: event.rs  lib.rs  server.rs  traffic_simulator.rs  workflow.rs
programs/event-loop/src/cli/: cmd.rs  config.rs
programs/ibc-attestor/: ARCHITECTURE.md  Cargo.toml  Dockerfile  PICKUP.md  README.md  build.rs  key-gen.sh  server.dev.toml
programs/ibc-attestor/src/: adapter_client.rs  adapter_impls.rs  attestation.rs  attestation_store.rs  attestor.rs  cli.rs  error.rs  header.rs  height_store.rs  lib.rs  server.rs  signer.rs
programs/ibc-attestor/src/adapter_impls/: arbitrum.rs  common_evm.rs  cosmos.rs  ethereum.rs  header.rs  optimism.rs  sol.rs
programs/ibc-attestor/src/cli/: cmd.rs  config.rs
programs/l2-node-reader/: Cargo.toml
programs/l2-node-reader/src/: main.rs
programs/operator/: Cargo.toml  README.md
programs/operator/src/cli/: command.rs
programs/operator/src/runners/: genesis.rs  mod.rs  operator.rs  solana_misbehaviour_to_borsh.rs
programs/proof-api/: ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  config.example.json
programs/proof-api/src/: cli.rs  lib.rs  observability.rs
programs/relayer/: ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  build.rs  config.example.json  config.example.toml
programs/relayer/proto/relayer/: relayer.proto
programs/relayer/src/: cli.rs  lib.rs  observability.rs  tracing.rs
programs/relayer/src/cli/: cmd.rs  config.rs  mod.rs
programs/relayer/src/core/: builder.rs  modules.rs  relayer.rs
programs/relayer/src/metrics/: mod.rs
programs/relayer/src/modules/: cosmos_to_cosmos.rs  cosmos_to_eth.rs  eth_to_cosmos.rs  eth_to_cosmos_compat.rs  mod.rs
programs/relayer/tests/: config_parsing.rs
programs/sig-aggregator/: Cargo.toml  Dockerfile  README.md  build.rs  config.example.toml  config.toml  docker-compose.yml  generate-test-keys.sh
programs/sig-aggregator/config/: aggregator.toml  attestor1.toml  attestor2.toml  attestor3.toml
programs/sig-aggregator/src/: aggregator.rs  attestor.rs  attestor_data.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  mock_attestor.rs  server.rs
programs/signer/: Cargo.toml
programs/signer/src/: attestor.rs  lib.rs  multi_sig_attestation.rs  verify_multi_sig.rs
programs/solana/: AGENTS.md  Anchor.toml  Cargo.toml  README.md  build.sh  package.json
programs/solana/integration-tests/: Cargo.toml  README.md
programs/solana/integration-tests/src/: accounts.rs  attestation.rs  attestor.rs  chain.rs  gmp.rs  ift.rs  lib.rs  programs.rs  relayer.rs  router.rs  user.rs
programs/solana/integration-tests/tests/: gmp_lifecycle.rs  router_lifecycle.rs
programs/solana/interfaces/ibc-app/: Cargo.toml
programs/solana/interfaces/light-client/: Cargo.toml  build.rs
programs/solana/programs/access-manager/: Cargo.toml  README.md
programs/solana/programs/attestation/: Cargo.toml  README.md  SOLIDITY_COMPARISON.md
programs/solana/programs/attestation-light-client/: Cargo.toml
programs/solana/programs/cpi-test-target/: Cargo.toml
programs/solana/programs/dummy-ibc-app/: Cargo.toml
programs/solana/programs/gmp-counter-app/: Cargo.toml
programs/solana/programs/ics07-tendermint/: Cargo.toml  README.md
programs/solana/programs/ics26-router/: Cargo.toml  README.md  build.rs
programs/solana/programs/ics27-gmp/: Cargo.toml  build.rs
programs/solana/programs/ics27-ift/: Cargo.toml  build.rs
programs/solana/programs/ift/: Cargo.toml  build.rs
programs/solana/programs/malicious-caller/: Cargo.toml
programs/solana/programs/mock-ibc-app/: Cargo.toml
programs/solana/programs/mock-light-client/: Cargo.toml
programs/solana/solana-light-client-interface/: Cargo.toml  build.rs
programs/solana/tests/: Cargo.toml  ibc-eureka.test.js
programs/sp1-programs/: Cargo.toml
programs/sp1-programs/membership/: Cargo.toml
programs/sp1-programs/misbehaviour/: Cargo.toml
programs/sp1-programs/uc-and-membership/: Cargo.toml
programs/sp1-programs/update-client/: Cargo.toml
programs/sp1-programs/utils/: Cargo.toml
relayer/: Cargo.toml  config.example.json
relayer/proto/: relayer.proto
relayer/proto/relayer/: chain.proto  relayer.proto
relayer/src/: lib.rs
relayer/src/cli/: cmd.rs  config.rs  mod.rs
relayer/src/core/: builder.rs  modules.rs
relayer/src/modules/: cosmos_to_eth.rs  mod.rs  trait.rs
tools/misbehaviour-to-borsh/: Cargo.toml  README.md
tools/misbehaviour-to-borsh/src/: main.rs
(+1567 files in other folders)
