[workspace]
members = [
    "packages/ethereum/light-client",
    "packages/ethereum/trie-db",
    "packages/ethereum/types",
    "packages/ethereum/apis",
    "packages/ethereum/tree_hash",
    "packages/tendermint-light-client/update-client",
    "packages/tendermint-light-client/membership",
    "packages/tendermint-light-client/misbehaviour",
    "packages/tendermint-light-client/uc-and-membership",
    "packages/tendermint-light-client/solana",
    "packages/solidity",
    "packages/relayer/lib",
    "packages/relayer/core",
    "packages/relayer/modules/eth-to-cosmos",
    "packages/relayer/modules/cosmos-to-eth",
    "packages/relayer/modules/cosmos-to-cosmos",
    "packages/relayer/modules/eth-to-cosmos-compat",
    "packages/relayer/modules/solana-to-cosmos",
    "packages/relayer/modules/cosmos-to-solana",
    "packages/sp1-ics07-tendermint-prover",
    "packages/utils",
    "packages/constrained_types",

    "programs/relayer",
    "programs/operator",
    "programs/cw-ics08-wasm-eth",
]
resolver = "2"

[workspace.package]
version    = "0.1.0"
edition    = "2021"
license    = "MIT"
repository = "https://github.com/cosmos/solidity-ibc-eureka"
keywords   = ["cosmos", "ibc", "sp1", "tendermint", "ethereum", "bridge", "solidity", "eureka"]

[workspace.dependencies]
ibc-eureka-solidity-types               = { path = "packages/solidity", default-features = false }
ibc-eureka-relayer-lib                  = { path = "packages/relayer/lib", default-features = false }
ibc-eureka-relayer-core                 = { path = "packages/relayer/core", default-features = false }
ibc-eureka-relayer-eth-to-cosmos        = { path = "packages/relayer/modules/eth-to-cosmos", default-features = false }
ibc-eureka-relayer-cosmos-to-eth        = { path = "packages/relayer/modules/cosmos-to-eth", default-features = false }
ibc-eureka-relayer-cosmos-to-cosmos     = { path = "packages/relayer/modules/cosmos-to-cosmos", default-features = false }
ibc-eureka-relayer-eth-to-cosmos-compat = { path = "packages/relayer/modules/eth-to-cosmos-compat", default-features = false }
ibc-eureka-relayer-solana-to-cosmos     = { path = "packages/relayer/modules/solana-to-cosmos", default-features = false }
ibc-eureka-relayer-cosmos-to-solana     = { path = "packages/relayer/modules/cosmos-to-solana", default-features = false }
ibc-eureka-utils                        = { path = "packages/utils", default-features = false }
ibc-eureka-constrained-types            = { path = "packages/constrained_types", default-features = false }
sp1-ics07-tendermint-prover             = { path = "packages/sp1-ics07-tendermint-prover", default-features = false }
sp1-ics07-tendermint-update-client      = { path = "programs/sp1-programs/update-client", default-features = false }
sp1-ics07-tendermint-membership         = { path = "programs/sp1-programs/membership", default-features = false }
sp1-ics07-utils                         = { path = "programs/sp1-programs/utils" }
ethereum-trie-db                        = { path = "packages/ethereum/trie-db", default-features = false }
ethereum-light-client                   = { path = "packages/ethereum/light-client", default-features = false }
ethereum-types                          = { path = "packages/ethereum/types", default-features = false }
ethereum-apis                           = { path = "packages/ethereum/apis", default-features = false }
tree_hash                               = { path = "packages/ethereum/tree_hash", default-features = false }

tendermint-light-client-update-client     = { path = "packages/tendermint-light-client/update-client", default-features = false }
tendermint-light-client-membership        = { path = "packages/tendermint-light-client/membership", default-features = false }
tendermint-light-client-misbehaviour      = { path = "packages/tendermint-light-client/misbehaviour", default-features = false }
tendermint-light-client-uc-and-membership = { path = "packages/tendermint-light-client/uc-and-membership", default-features = false }
tendermint-light-client-solana            = { path = "packages/tendermint-light-client/solana", default-features = false }

brine-ed25519 = { version = "0.2", default-features = false }

# Pin serde to 1.0.219 to fix compatibility with alloy-consensus 0.14.0
# alloy-consensus uses serde::__private APIs that changed in serde 1.0.220+
serde           = { version = "=1.0.219", default-features = false }
serde_json      = { version = "1.0", default-features = false }
serde_cbor      = { version = "0.11", default-features = false }
serde_with      = { version = "3.11", default-features = false }
hex             = { version = "0.4", default-features = false }
base64          = { version = "0.22", default-features = false }
prost           = { version = "0.13", default-features = false }
prost-build     = { version = "0.13", default-features = false }
# Solana workspace uses borsh 0.10.4 for Anchor compatibility (Anchor 0.31.1 requires that version).
borsh           = { version = "1.3", default-features = false }
subtle-encoding = { version = "0.5", default-features = false }
schemars        = { version = "0.8", default-features = false }

sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
rand = { version = "0.9", default-features = false }

tokio            = { version = "1.0", default-features = false }
tonic            = { version = "0.13", default-features = false }
tonic-build      = { version = "0.13", default-features = false }
tonic-reflection = { version = "0.13", default-features = false }
warp             = { version = "0.3", default-features = false }

prometheus         = { version = "0.14", default-features = false }
tracing            = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
anyhow             = { version = "1.0", default-features = false }
async-trait        = { version = "0.1", default-features = false }
futures            = { version = "0.3", default-features = false }
futures-timer      = { version = "3.0", default-features = false }
clap               = { version = "4.5", default-features = false, features = ["std"] } # std feature is required for clap
time               = { version = "0.3", default-features = false }
dotenv             = { version = "0.15", default-features = false }
thiserror          = { version = "2.0", default-features = false }
reqwest            = { version = "0.12", default-features = false }
reqwest_0_11       = { package = "reqwest", version = "0.11", default-features = false }

tendermint                       = { version = "0.40", default-features = false }
tendermint-rpc                   = { version = "0.40", default-features = false }
tendermint-light-client-verifier = { version = "0.40", default-features = false }
tendermint-proto                 = { version = "0.40", default-features = false }

ibc-client-tendermint       = { version = "0.57", default-features = false }
ibc-client-tendermint-types = { version = "0.57", default-features = false }
ibc-core-client             = { version = "0.57", default-features = false }
ibc-core-host-types         = { version = "0.57", default-features = false }
ibc-core-client-types       = { version = "0.57", default-features = false }
ibc-core-commitment-types   = { version = "0.57", default-features = false }

cosmos-sdk-proto = { version = "0.26", default-features = false }
ibc-proto        = { version = "0.51", default-features = false }
ibc-proto-eureka = { package = "ibc-proto", git = "https://github.com/srdtrk/ibc-proto-rs", rev = "7074fb20c3a654e945e5ca46627c5a971d785e04", default-features = false }
ics23            = { version = "0.12", default-features = false }

ibc-primitives              = { version = "0.57", default-features = false }

alloy                  = { version = "1.0", default-features = false }
alloy-contract         = { version = "1.0", default-features = false }
alloy-sol-types        = { version = "1.0", default-features = false }
alloy-primitives       = { version = "1.0", default-features = false }
alloy-serde            = { version = "1.0", default-features = false }
alloy-network          = { version = "1.0", default-features = false }
alloy-signer-local     = { version = "1.0", default-features = false }
alloy-rlp              = { version = "0.3", default-features = false }
alloy-provider         = { version = "1.0", default-features = false }
alloy-transport        = { version = "1.0", default-features = false }
alloy-rpc-types-eth    = { version = "1.0", default-features = false }

sp1-sdk    = { version = "=5.0.0", default-features = false }
sp1-prover = { version = "=5.0.5", default-features = false }

cosmwasm-schema = { version = "2.2", default-features = false }
cosmwasm-std    = { version = "2.2", default-features = false }
cw2             = { version = "2.0", default-features = false }

# The dependencies below are maintained by Sigma Prime (for use in Lighthouse (and the broader Ethereum ecosystem))
ethereum_ssz        = { version = "0.9", default-features = false }
ethereum_ssz_derive = { version = "0.9", default-features = false }
tree_hash_derive    = { version = "0.10", default-features = false }

# The dependencies below are maintained by Parity Tech
trie-db            = { version = "0.30", default-features = false }
hash-db            = { version = "0.16", default-features = false }
memory-db          = { version = "0.32", default-features = false }
hash256-std-hasher = { version = "0.15", default-features = false }
rlp                = { version = "0.6", default-features = false }
rlp-derive         = { version = "0.2", default-features = false }
primitive-types    = { version = "0.13", default-features = false }

# test/dev-dependencies
milagro_bls   = { git = "https://github.com/Snowfork/milagro_bls", rev = "bc2b5b5e8d48b7e2e1bfaa56dc2d93e13cb32095", default-features = false } # Only used for testing, not to be used in production!
smallvec      = { version = "1.6.1", default-features = false }
cw-ics08-wasm-eth-v1_2_0 = { package = "cw-ics08-wasm-eth", git = "https://github.com/cosmos/solidity-ibc-eureka", tag = "cw-ics08-wasm-eth-v1.2.0", default-features = false }
ethereum-light-client-v1_2_0 = { package = "ethereum-light-client", git = "https://github.com/cosmos/solidity-ibc-eureka", tag = "cw-ics08-wasm-eth-v1.2.0", default-features = false }

# Solana dependencies
solana-client             = { version = "2.0" }
solana-sdk                = { version = "2.0" }
solana-transaction-status = { version = "2.0" }
bincode                   = { version = "1.3" }
anchor-lang               = { version = "0.31.1" }
anchor-client             = { version = "0.31.1" }

# TODO: Remove these dependencies once ethereum wasm client v1.2.0 backwards compatibility is not needed
ibc-eureka-relayer-eth-to-cosmos-v1_2 = { package = "ibc-eureka-relayer-eth-to-cosmos", git = "https://github.com/cosmos/solidity-ibc-eureka", rev = "d9f58589bee5881561cd8c769750a35448e5ebc8", default-features = false }
ibc-eureka-relayer-core-v1_2= { package = "ibc-eureka-relayer-core", git = "https://github.com/cosmos/solidity-ibc-eureka", rev = "d9f58589bee5881561cd8c769750a35448e5ebc8", default-features = false }

[patch.crates-io]
# Patch tendermint-rs crates to use fork with instance-based Verifier trait
tendermint = { git = "https://github.com/vaporif/tendermint-rs", branch = "verifier-with-instance" }
tendermint-proto = { git = "https://github.com/vaporif/tendermint-rs", branch = "verifier-with-instance" }
tendermint-light-client-verifier = { git = "https://github.com/vaporif/tendermint-rs", branch = "verifier-with-instance" }
tendermint-config = { git = "https://github.com/vaporif/tendermint-rs", branch = "verifier-with-instance" }
tendermint-rpc = { git = "https://github.com/vaporif/tendermint-rs", branch = "verifier-with-instance" }

