[package]
name = "solidity-ibc-eureka-relayer"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
tonic = { workspace = true, default-features = true }
prost = { workspace = true, default-features = true }

[build-dependencies]
tonic-build = { workspace = true, default-features = true }
