[package]
name = "solidity-ibc-eureka-relayer"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
ibc-eureka-relayer-lib = { workspace = true, default-features = true }

tonic = { workspace = true, default-features = true }

tracing = { workspace = true, default-features = true }

prost = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true }

alloy = { workspace = true, features = ["full", "node-bindings"] }

tendermint = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true, default-features = true }
