[package]
name = "cw-08-wasm-etheruem-light-client"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ibc-proto = { workspace = true }
ethereum-light-client = { workspace = true }
ethereum-utils = { workspace = true }

alloy-primitives = { workspace = true, default-features = false }

cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
tendermint-proto = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
ethereum-test-utils = { workspace = true }
