[package]
name = "attestor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
anyhow = { workspace = true, default-features = true }
clap = { workspace = true, features = ["derive"] }
dirs = "6.0.0"
secp256k1 = { workspace = true, features = [
    "global-context",
    "hashes",
    "std",
    "rand",
] }
thiserror = { workspace = true, default-features = true }

[dev-dependencies]
secp256k1 = { workspace = true, features = ["rand"] }
tempdir = "0.3"
assert_cmd = "2.0"
predicates = "3.0"
