[package]
name = "cw-ics08-wasm-attestor"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ibc-proto = { workspace = true }
attestor-light-client = { workspace = true }
attestor-packet-membership = { workspace = true }
alloy-sol-types = { workspace = true, default-features = false, features = ["json"] }

cosmwasm-std = { workspace = true, features = ["std"] }
cosmwasm-schema = { workspace = true }
cw2 = { workspace = true }
prost = { workspace = true, features = ["std"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
ed25519-zebra = { workspace = true, features = ["alloc"] }

[dev-dependencies]
attestor-light-client = { workspace = true, features = ["test-utils"] }
