[package]
name = "cw-ics08-wasm-attestor"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ibc-proto = { workspace = true }
attestor-light-client = { workspace = true }

cosmwasm-std = { workspace = true, features = ["std"] }
cosmwasm-schema = { workspace = true }
cw2 = { workspace = true }
prost = { workspace = true, features = ["std"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
attestor-light-client = { workspace = true, features = ["test-utils"] }
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }
ibc-eureka-solidity-types = { workspace = true }
