[package]
name = "event-loop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]

tokio            = { workspace = true, features = ["full"] }
tokio-stream            = { version =  "0.1.17" }

tracing            = { workspace = true, default-features = true }
tracing-subscriber = { workspace = true, default-features = true }
clap               = { workspace = true, features = ["derive"] }
anyhow             = { workspace = true, default-features = true, features = ["backtrace"] }
futures            = { workspace = true, default-features = true }

serde      = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, default-features = true }
prost      = { workspace = true, default-features = true }

warp = { workspace = true, default-features = true }

[build-dependencies]
tonic-build = { workspace = true, default-features = true }
